--- a/about.html
+++ b/about.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>Dunder Mifflin - Home</title>
+<title>Dunder Mifflin - About</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
@@ -55,46 +55,31 @@
       <body bgcolor = "bob"><font face = "Arial" color = "black">
 	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
 	    <tr height ="30">
-		<th width = "50%">
-		<a href = "products.html"><img width = "400" 
-		height = "400" src = "Images/PaperCASE.png"></a></th>
-		<font size = "6"><th width = "50%">Only<br>$</font>
-		<font size = "7"><i>39.99</i></font>
-		<font size = "4"><br>8.5" x 11"  20Ib COPY PAPER
+		<th>
+		<font size = "6"><br>About</font><br><br><br>
+		<font size = "4">Dunder Mifflin is a mid-cap 
+		regional paper and office supply distributor with 
+		an <br>emphasis on servicing small-business clients. 
+		With a corporate office in New York City, <br>Dunder 
+		Mifflin has branches in Akron, Ohio; Nashua, 
+		New Hampshire; Rochester, New York;<br> Scranton, 
+		Pennsylvania; Syracuse, New York; and Utica, 
+		New York.<br><br>  
+		
+		The company was founded by Robert Dunder and Robert 
+		Mifflin in 1949, where they supplied<br> metal 
+		brackets. Eventually, the company started selling 
+		paper and opened several<br> branches across the 
+		Northeastern United States.<br><br>
+
+		In 2009, the company went bankrupt, and was bought 
+		by printer company Sabre.<br> In 2012, Sabre was 
+		dissolved and the company became Dunder Mifflin 
+		once again.<br><br><br>
+		  		
 		</font></th>
         </tr>
        </table></font>
-
-	<table width = "1000" CELLSPACING= 0 border = "1" 
-		bgcolor = "#bce3e0">
-		<tr height = "30">
-		   <th width = "25%">
-			<a href = "paperWhite.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q> White</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperBlue.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-		        <h3>Copy Paper: 8.5<q>"x11</q> Blue</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperRed.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q><br>Red</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperBlack.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q> Black</h3>
-		   </th>
-		   
-
-	</table>
 	
       </body>
 
