--- a/cart.html
+++ b/cart.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html bgcolor ="bob">
 <center>
-<title>Dunder Mifflin - Home</title>
+<title>Dunder Mifflin - Cart</title>
 <head>
   <!--Header image. It is the with of the page: 1000px-->
   <table width = "1000">
@@ -55,45 +55,46 @@
       <body bgcolor = "bob"><font face = "Arial" color = "black">
 	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">
 	    <tr height ="30">
-		<th width = "50%">
-		<a href = "products.html"><img width = "400" 
-		height = "400" src = "Images/PaperCASE.png"></a></th>
-		<font size = "6"><th width = "50%">Only<br>$</font>
-		<font size = "7"><i>39.99</i></font>
-		<font size = "4"><br>8.5" x 11"  20Ib COPY PAPER
-		</font></th>
-        </tr>
-       </table></font>
+		<th><br><br>
+			<font size = "6">YOUR CART</font>		
+		</th>
+            </tr>
+	</table></font>
 
-	<table width = "1000" CELLSPACING= 0 border = "1" 
-		bgcolor = "#bce3e0">
-		<tr height = "30">
-		   <th width = "25%">
-			<a href = "paperWhite.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q> White</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperBlue.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-		        <h3>Copy Paper: 8.5<q>"x11</q> Blue</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperRed.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q><br>Red</h3>
-		   </th>
-		   <th width = "25%">
-			<a href = "paperBlack.html">
-			<img width = "150" height = "150"
-			src = "Images/PaperCASE.png"></a>
-			<h3>Copy Paper: 8.5<q>"x11</q> Black</h3>
-		   </th>
-		   
-
+	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">	
+	   <tr height = "30">
+		<th><br><br>
+			<img width = "250" height = "250"
+			src = "Images/PaperCASE.png">
+		</th>
+		<th>
+			<font size = "4">Copy Paper:<br><br> 8.5" x 
+			11" 20Ib. White</font>
+		</th>
+		<th>
+			<font size = "4">Quantity</font><br><br>
+			<input type = "number" name = "quanity"
+			placeholder = "1">
+		</th>
+		<th>
+			<font size = "4">Total Price</font><br><br>
+			<font size = "4">$39.99</font>
+		</th>
+	    </tr>
+	  </table>
+	<table width = "1000" CELLSPACING= 0 bgcolor = "#ffffff">	
+	   <tr>
+		<th><br>
+		  <form>
+			<a href = "paymentinfo.html">
+			<button type = "button">Continue to Payment
+			& Shipping
+			</button></a><br><br><br>
+		  </form>
+		</th>
+	    </tr>
+	  </table>
+	 
 	</table>
 	
       </body>
