--- a/products.html
+++ b/products.html
@@ -44,7 +44,7 @@
       }
       
       .grid-product {
-        border: 1px solid rgba(0, 0, 0, 0.05);
+        border: 2px solid rgba(0, 0, 0, 0.05);
         background-color: white;
         margin: 12px;
         display: grid;
@@ -54,6 +54,13 @@
       .product-selection-container {
         margin-top: 10px;
         margin-left: 10px;
+      }
+
+      .grid-product:hover {
+        transform: scale(1.04);
+        box-shadow: 0 12px 16px 0 rgba(0,0,0,0.24), 0 17px 50px 0 rgba(0,0,0,0.19);
+
+
       }
         /*The following styles are taken from this website: https://www.w3schools.com/howto/howto_css_custom_checkbox.asp
         I had no idea how to customize checkboxes so I had to google it and found this source*/
